--- a/Monopoli02/.classpath
+++ b/Monopoli02/.classpath
@@ -3,6 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="C:/eclipse/libraries/HamCrest/hamcrest1.1/org.hamcrest.library_1.1.0.v20090501071000.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="C:/eclipse/libraries/HamCrest/hamcrest1.1/hamcrest-library-1.1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
